2006-09-09  Martin Mares  <mj@ucw.cz>

	* Added .gitignore files.

	* Makefile (clean): Clean *.orig, too.

	* Cleaned up usage of `char' and `byte'.

	* lib/header.h: PCI_CLASS_DOCKING_OTHER should be 0x0a80, not 0x0a01.

	* lib/header.h: Added PCI_CLASS_xxx constants for all classes currently
	defined in the pci.ids file.

2006-08-01  Martin Mares  <mj@ucw.cz>

	* lib/i386-io-hurd.h: Fixed a silly typo.

2006-07-30  Martin Mares  <mj@ucw.cz>

	* lib/Makefile: Added a missing rule for obsd-device.o.

	* lspci.c, lib/header.h: Added support for MSI per-vector masking.
	Contributed by Petr Vandrovec.

	* lspci.c, lib/header.h: Added support for the `bridge subsystem ID'
	capability. Contributed by Petr Vandrovec.

	* lspci.c (show_htype1): Fixed bug in printing of 64-bit prefetchable
	memory windows. Fix by Petr Vandrovec.

	* maint/release.pm: Exclude .git directory from releases.

	* lib/i386-ports.c, lib/i386-io-*: Report failures during port access
	initialization by a->warn() instead of calling printf() or perror()
	directly.

	* lib/i386-ports.c, lib/i386-io-*: Moved the logic which keeps track of
	the port access state to generic code.

	* lib/i386-io-hurd.h: Ask the kernel for I/O port access appropriately.
	Contributed by Thomas Schwinge and Samuel Thibault.

	* lib/i386-ports.c: Define _GNU_SOURCE, it's needed by the Hurd module.

	* lib/header.h: Whitespace cleanups.

	* lib/i386-io-windows.h: Fixed indentation and spelling.

	* README.Windows: Mention that WinIO.dll is needed and where to get it.

2006-06-27  Martin Mares  <mj@ucw.cz>

	* lib/Makefile, Makefile: Added rules for building and cleaning the example.

	* lib/example.c: Show how to use PCI_FILL_CLASS and used another register
	for demonstrating the config space accesses. The example is still very
	incomplete, though.

	* lib/pci.h, lib/generic.c: Added PCI_FILL_CLASS.

	* lib/sysfs.c: Fetch device ID and class from sysfs, because they can
	be modified by kernel fixups.
